--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
 
     kapt "com.android.databinding:compiler:3.1.4"
 
+    implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
+
     implementation 'com.google.dagger:dagger:2.24'
     implementation "com.google.dagger:dagger-android-support:2.24"
     kapt "com.google.dagger:dagger-android-processor:2.24"
