--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
 
     implementation("io.coil-kt:coil:0.9.2")
 
+    implementation 'androidx.room:room-runtime:2.2.6'
+    kapt 'androidx.room:room-compiler:2.2.6'
+
     kapt "com.android.databinding:compiler:3.1.4"
 
     implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
